log
Tue, May 13, 2025 12:27:33 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Tue, May 13, 2025 12:34:00 PM: 
 sudoku.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
7d14d67
Tue, May 13, 2025 12:52:53 PM: 
 sudoku.c | 35 ++++++++++++++++++++++++++++-------
 1 file changed, 28 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'vacioI' set but not used [-Werror=unused-but-set-variable]
     int vacioI = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
c3504b4
Tue, May 13, 2025 12:53:45 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:9: error: variable 'vacioJ' set but not used [-Werror=unused-but-set-variable]
     int vacioJ = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
422e582
Tue, May 13, 2025 12:54:17 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:9: error: variable 'vacioJ' set but not used [-Werror=unused-but-set-variable]
     int vacioJ = -1;
         ^~~~~~
cc1.exe: all warnings being treated as errors
a169ec1
Tue, May 13, 2025 12:54:44 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
3ef2a89
Tue, May 13, 2025  1:10:44 PM: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
5e9b08c
Tue, May 13, 2025  1:11:08 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f594084
Tue, May 13, 2025  1:12:08 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:117:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return 1;
           ^
cc1.exe: all warnings being treated as errors
57ad75b
Tue, May 13, 2025  1:12:44 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c39baf3
s치., 17 de may. de 2025 16:39:18: 
 sudoku.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 50 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:93:23: error: expected expression before ')' token
     for(p = 0; p< 9;++)
                       ^
a2c1818
s치., 17 de may. de 2025 16:40:39: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e6c65e3
s치., 17 de may. de 2025 16:42:23: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
487b0fc
s치., 17 de may. de 2025 16:47:40: 
 sudoku.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
a80200c
